--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
     <title>Tech App || Responsive || SAAS </title>
   </head>
 
-  <body>
+  <body class="home">
+    <input type="checkbox" name="" class="navigation__checkbox" id="navi-toggle">
+    <label for="nav-toggle" class="navigation__button">
+      <span class="navigation__icon">&nbsp;</span>
+    </label>
+    <div class="navigation__background">&nbsp;</div>
+
+    <!-- Navigation Items -->
+    <nav class="navigation__nav">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Technology</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Future Technology</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Latest Technology</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Blockchain Technology</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>See Future</a></li>
+      </ul>
+    </nav>
     
   </body>
 </html>
